--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "node-sass": "^7.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.0",
     "react-icons": "^4.4.0",
     "react-redux": "^8.0.4",
     "react-router": "^6.4.1",
