--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-router-dom": "^6.4.1",
     "react-scripts": "5.0.1",
     "react-scroll": "^1.8.7",
+    "react-spinners": "^0.13.5",
     "recharts": "^2.1.14",
     "redux": "^4.2.0",
     "sass": "^1.55.0",
